--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
 body {
     display: flex;
     background: linear-gradient(45deg, #e0c3fc 1%, #8ec5fc 100%);
+    transition: 0.7s;
+}
+
+.trocarmodo {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 15px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+body.modonoturno, main#container.modonoturno {
+    background-color: #142d4c;
+    color: white;
+}
+
+::selection {
+    background-color: white;
+    color: black;
 }
 
 main#container {
@@ -10,6 +33,7 @@ main#container {
     box-shadow: 8px 8px 0 0 #c3bef0;
     background-color: #cadefc;
     padding: 50px;
+    transition: 0.7s;
 }
 
 h1.titulo {
@@ -27,4 +51,8 @@ p.frase {
 p.autor {
     text-align: right;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body.modonoturno .trocarmodo {
+    background-color: #444;
 }
