--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     background: linear-gradient(45deg, #e0c3fc 1%, #8ec5fc 100%);
-    transition: 0.7s;
+    transition: .6s;
 }
 
 .trocarmodo {
@@ -16,11 +16,6 @@ body {
     cursor: pointer;
 }
 
-body.modonoturno, main#container.modonoturno {
-    background-color: #142d4c;
-    color: white;
-}
-
 ::selection {
     background-color: white;
     color: black;
@@ -33,7 +28,7 @@ main#container {
     box-shadow: 8px 8px 0 0 #c3bef0;
     background-color: #cadefc;
     padding: 50px;
-    transition: 0.7s;
+    transition: .6s;
 }
 
 h1.titulo {
@@ -55,4 +50,9 @@ p.autor {
 
 body.modonoturno .trocarmodo {
     background-color: #444;
+}
+
+body.modonoturno, main#container.modonoturno {
+    background-color: #142d4c;
+    color: white;
 }
