--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    translate: 0 5px;
 }
 
 ::selection {
@@ -55,4 +56,5 @@ body.modonoturno .trocarmodo {
 body.modonoturno, main#container.modonoturno {
     background-color: #142d4c;
     color: white;
+    transition: 0.6s;
 }
